--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
     "framer-motion": "^10.17.12",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.0"
   },
