--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-icons": "^5.0.0"
+    "react-icons": "^5.0.0",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
