--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.5",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.17.12",
+    "html5-qrcode": "^2.3.8",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
