--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html5-qrcode": "^2.3.8",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-nprogress-bar": "^2.1.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
