--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.0",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
